CW renamed to auth directory